Fix whitespace for labels on special collections

--- a/app/assets/stylesheets/application/_projects.scss
+++ b/app/assets/stylesheets/application/_projects.scss
@@ -170,6 +170,7 @@ input[type="checkbox"] + label.ss-cb-label {
   line-height: 1.3;
   padding-left: 1.25em;
   cursor: pointer;
+  white-space: normal;
 
   // our little checkbox replacement square
   &:before {
